--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "league/omnipay": "^3.2",
         "livewire/livewire": "^2.5",
         "spatie/laravel-permission": "^5.5",
+        "stripe/stripe-php": "^7.121",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
